--- a/ressource/css/style.css
+++ b/ressource/css/style.css
@@ -4,14 +4,23 @@
 }
 body {
   font-family: "Nunito", sans-serif;
+  background-color: #282c3a;
   overflow-y: scroll;
   overflow-x: hidden;
+  background: #0f0c29;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  perspective: 1px;
+  transform-style: preserve-3d;
 }
 
 /* ============== H E A D E R ==============*/
 
 header {
-  background-image: url("../img/headerimg.jpg");
+  box-sizing: border-box;
+
+
+  background-image: url("../img/header.png");
   height: 95vh;
   background-position: 20% 20%;
   background-attachment: fixed;
@@ -22,8 +31,9 @@ header {
  -webkit-background-size: cover;
  border-bottom: 4px solid black;
  box-shadow: 0 0 15px black;
- margin-bottom: 50px;
+ margin-bottom: 70px;
 }
+
 
 /* ============== N A V B A R  ==============*/
 nav {
@@ -70,4 +80,6 @@ nav {
   width: 100%;
   border: 2px solid black;
   box-shadow: 0 0 15px black;
+  margin-bottom: 70px;
+
 }
