--- a/ressource/css/style.css
+++ b/ressource/css/style.css
@@ -6,7 +6,7 @@ html {
   height: 100%;
 }
 body {
-  font-family: "Nunito", sans-serif;
+  font-family: "Orbitron", sans-serif;
   background-color: #282c3a;
   background: #0f0c29;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
@@ -29,11 +29,21 @@ header {
  box-shadow: 0 0 15px black;
  margin-bottom: 70px;
 }
+.page-back {
+  width: 120%;
+  height: 120%;
+  left: -10%;
+  top: -10%;
+  position: absolute;
+  background-image: url("../img/header.png");
+  background-size: cover;
+  background-position: center;
+}
 
 /* ============== N A V B A R  ==============*/
 nav {
   background-color: rgba(35, 35, 35, 0.75);
-  border-bottom: 5px solid black;
+  border-bottom: 5px solid #0d001c;
   box-shadow: 0 0 15px black;
 }
 .navbar div ul li {
@@ -42,7 +52,7 @@ nav {
 }
 .navbar div ul li a {
   font-weight: 300;
-  color: #fff;
+  color: #b7b7b7;
   font-size: 20px;
   padding-top: 20px;
   text-decoration: none;
@@ -58,10 +68,10 @@ nav {
 
 /* ============== T I T R E  ==============*/
 .titre div h1 {
-  color: #eaeaea;
+  color: #b7b7b7;
   text-align: center;
   margin-top: 25%;
-  border: 3px solid #eaeaea;
+  border: 3px solid #23004c;
   border-radius: 2px;
   padding: 25px;
   background-color: rgba(35, 35, 35, 0.6);
@@ -72,11 +82,11 @@ nav {
 /* ============== M A P  ==============*/
 #map {
   height: 60vh;
-  width: 100%;
+  width: 70%;
   border: 2px solid black;
   box-shadow: 0 0 15px black;
   margin-bottom: 70px;
-
+  margin: 0 auto 70px;
 }
 
 
